# For-mod10

m_10/: pyproject.toml
m_10/11/mysite/: db.sqlite3
m_10/11/mysite/mysite/: settings.py  urls.py
m_10/11/mysite/polls/: models.py  views.py
m_10/11/mysite/polls/migrations/: 0001_initial.py  0002_rename_chice_choice.py
m_10/my_app/my_app/: settings.py  urls.py
m_10/my_app/photo_app/: urls.py  views.py
m_10/my_app/photo_app/templates/photo_app/: base.html  index.html
