[tool.poetry]
name = "m-10"
version = "0.1.0"
description = ""
authors = ["Anton Kalchenko  <anton11042002@gmail.com>"]
readme = "README.md"
packages = [{include = "m_10"}]

[tool.poetry.dependencies]
python = "^3.11"
django = "^4.2.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
